<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    >
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/Appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genuva_app"
        android:textColor="#033CF8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="40sp"


        />
    <androidx.cardview.widget.CardView
        android:id="@+id/Card_view"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Appname"
        >
        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp"
            >

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_avatar"
                android:textColorHint="#FF0000"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_avatar" />
            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:layout_margin="8dp"
                android:textColorHint="#FF0000"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock"
                android:drawableStart="@drawable/ic_lock" />
            <Button
                android:id="@+id/login_btn"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/login_btn_homepage"
                android:layout_gravity="center"
                android:background="#304ADE"
                android:textColor="#FFFFFF"
                android:textSize="20sp"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/Forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Card_view"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forget_password"
        android:textColor="#1A2F9C"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/dont_hsve_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Forget_pass"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/do_not_have_account"
        android:textColor="#000000"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/Signup_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/dont_hsve_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dont_hsve_account"
        android:text="@string/sign_up_btn_home"
        android:textSize="16sp"
        android:textColor="#1A2F9C"
        android:layout_marginRight="65dp"
        android:layout_marginEnd="60dp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/Card_view_googleloginbtn"
        android:layout_marginTop="40dp"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dont_hsve_account"
        android:background="#FFFFFF"
        >

        <Button
            android:id="@+id/google_login_btn"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:background="#FFFFFF"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:drawableLeft="@drawable/ic_google_search"
            android:textAllCaps="false"

            android:drawableStart="@drawable/ic_google_search" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Card_view_loginphone"
        android:layout_marginTop="40dp"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Card_view_googleloginbtn"
        android:background="#FFFFFF"
        >


        <Button
            android:id="@+id/phonelogin_btn"
            android:drawableLeft="@drawable/ic_phone_call"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/login_by_phone_number"
            android:background="#FFFFFF"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_phone_call" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Card_view_FBbtn"
        android:layout_marginTop="40dp"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Card_view_loginphone"
        android:background="#FFFFFF"
        >

        <com.facebook.login.widget.LoginButton
            android:id="@+id/FBlogin_btn"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:text="@string/continue_with_facebook"
            android:background="#475993"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:drawableLeft="@drawable/ic_facebook"
            android:drawableStart="@drawable/ic_facebook" >

        </com.facebook.login.widget.LoginButton>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>