<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneSigIn">

    <androidx.cardview.widget.CardView
        android:id="@+id/Card_view_phonepage"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp"
            >

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_phone_call"
                android:inputType="phone"
                android:drawableStart="@drawable/ic_phone_call" />
            <Button
                android:id="@+id/verification_Code_btn"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/get_verification_code"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:background="#304ADE"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_margin="20sp"

                />

            <EditText
                android:id="@+id/Code_Received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_code_received"
                android:layout_margin="8dp"
                android:inputType="number"
                />

            <Button
                android:id="@+id/login_btn_phone_page"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/login"
                android:layout_gravity="center"
                android:background="#304ADE"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_margin="20sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>