<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLogin">

    <TextView
        android:id="@+id/hello_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello Admin"
        android:textStyle="italic"
        android:textColor="#033CF8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"
        android:textSize="40sp"


        />
    <androidx.cardview.widget.CardView
        android:id="@+id/Card_view_Admin"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_admin"
        >
        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp"
            >

            <EditText
                android:id="@+id/AdminEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_avatar"
                android:textColorHint="#FF0000"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_avatar" />
            <EditText
                android:id="@+id/AdminPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:layout_margin="8dp"
                android:textColorHint="#FF0000"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock"
                android:drawableStart="@drawable/ic_lock" />
            <Button
                android:id="@+id/Admin_login_btn"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/login_btn_Adminpage"
                android:layout_gravity="center"
                android:background="#304ADE"
                android:textColor="#FFFFFF"
                android:textSize="20sp"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>